--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,5 @@
-body {
-  color: #314249;
-  font-family: 'Source Sans Pro', sans-serif; }
-
 /* Colours */
-/* Typography */
-/* Headings */
-.heading--xlarge {
-  font-size: 48px; }
-
-.heading--large {
-  font-size: 36px; }
-
-.heading--medium {
-  font-size: 24px; }
-
-.heading--white {
-  color: #FFFFFF; }
-
-/* Typography */
-ul {
-  padding-left: 0; }
-
-/* Header */
-.header {
-  background-color: #314249; }
-
-.header__wrapper {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 1em 0; }
-
-.header__heading {
-  margin: 0; }
-
-/* Main Content */
-.content {
-  margin: 0 auto;
-  max-width: 960px; }
-
-/* Colour Swatches */
+/* Swatches */
 .swatch {
   display: inline-block;
   padding-right: 1em; }
@@ -59,5 +20,45 @@ ul {
 
 .swatch__circle--light-grey {
   background-color: #EBEEEE; }
+
+/* Typography */
+body {
+  color: #314249;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 100%; }
+
+/* Headings */
+.heading--xlarge {
+  font-size: 48px; }
+
+.heading--large {
+  font-size: 36px; }
+
+.heading--medium {
+  font-size: 24px; }
+
+.heading--white {
+  color: #FFFFFF; }
+
+/* Lists */
+ul {
+  padding-left: 0; }
+
+/* Header */
+.header {
+  background-color: #314249; }
+
+.header__wrapper {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 1em 0; }
+
+.header__heading {
+  margin: 0; }
+
+/* Main Content */
+.content {
+  margin: 0 auto;
+  max-width: 960px; }
 
 /*# sourceMappingURL=style.css.map */
