--- a/css/style.scss
+++ b/css/style.scss
@@ -1,38 +1,6 @@
-body {
-  color: #314249;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-/* Colours */
-
-$colour-orange: #F8981D;
-$colour-white: #FFFFFF;
-
-/* Typography */
-
-/* Headings */
-
-.heading--xlarge {
-  font-size: 48px;
-}
-
-.heading--large {
-  font-size: 36px;
-}
-
-.heading--medium {
-  font-size: 24px;
-}
-
-.heading--white {
-  color: $colour-white;
-}
-
-/* Typography */
-
-ul {
-  padding-left: 0;
-}
+@import 'colours';
+@import 'swatches';
+@import 'typography';
 
 /* Header */
 
@@ -55,33 +23,4 @@ ul {
 .content {
   margin: 0 auto;
   max-width: 960px;
-}
-
-/* Colour Swatches */
-
-.swatch {
-  display: inline-block;
-  padding-right: 1em;
-}
-
-.swatch__heading {
-  margin-bottom: .5em;
-}
-
-.swatch__circle {
-  width: 10em;
-  height: 10em;
-  margin: 0 auto;
-}
-
-.swatch__value {
-  margin-top: .5em;
-}
-
-.swatch__circle--orange {
-  background-color: $colour-orange;
-}
-
-.swatch__circle--light-grey {
-  background-color: #EBEEEE;
 }
