--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -1,31 +1,31 @@
 /* Typography */
-
+/* =========================================================================*/
 body {
-  color: $colour-dark-grey;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 100%;
+    color: $colour-dark-grey;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
 }
-
 /* Headings */
-
 .heading--xlarge {
-  font-size: 48px;
+    font-size: 48px;
+    font-weight: bold;
 }
-
 .heading--large {
-  font-size: 36px;
+    font-size: 36px;
+    font-weight: bold;
 }
-
 .heading--medium {
-  font-size: 24px;
+    font-size: 24px;
+    font-weight: bold;
 }
-
+.heading--small {
+    font-size: 18px;
+    font-weight: bold;
+}
 .heading--white {
-  color: $colour-white;
+    color: $colour-white;
 }
-
 /* Lists */
-
 ul {
-  padding-left: 0;
+    padding-left: 0;
 }
