--- a/css/style.scss
+++ b/css/style.scss
@@ -1,26 +1,5 @@
 @import 'colours';
-@import 'swatches';
 @import 'typography';
-
-/* Header */
-
-.header {
-  background-color: #314249;
-}
-
-.header__wrapper {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 1em 0;
-}
-
-.header__heading {
-  margin: 0;
-}
-
-/* Main Content */
-
-.content {
-  margin: 0 auto;
-  max-width: 960px;
-}
+@import 'layout';
+@import 'swatches';
+@import 'example';
