--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,10 +1,40 @@
 /* Layout */
 /* =========================================================================*/
-.container {
+/* Grid */
+.row {
     margin: 0 auto;
     max-width: 960px;
 }
-.content {
-    margin: 0 auto;
-    max-width: 960px;
+@media screen and (min-width: $break-medium) {
+    .column {
+        float: left;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
+    .column:first-child {
+        padding-left: 0;
+    }
+    .column:last-child {
+        padding-right: 0;
+    }
+    .column.half {
+        width: 50%;
+      }
+}
+/* Border box hack */
+*,
+*:after,
+*:before {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+/* Clearfix */
+.clearfix:after,
+.clearfix:before {
+    content: " ";
+    display: table;
+}
+.clearfix:after {
+    clear: both;
 }
