--- a/css/_swatches.scss
+++ b/css/_swatches.scss
@@ -2,7 +2,7 @@
 /* =========================================================================*/
 .swatch {
     text-align: center;
-    width: 100px;
+    width: 8em;
     display: inline-block;
     margin-right: 1em;
 }
