--- a/css/style.css
+++ b/css/style.css
@@ -87,19 +87,47 @@ ul {
 
 /* Layout */
 /* =========================================================================*/
-.container {
+/* Grid */
+.row {
   margin: 0 auto;
   max-width: 960px; }
 
-.content {
-  margin: 0 auto;
-  max-width: 960px; }
+@media screen and (min-width: 750px) {
+  .column {
+    float: left;
+    padding-left: 0.5em;
+    padding-right: 0.5em; }
+
+  .column:first-child {
+    padding-left: 0; }
+
+  .column:last-child {
+    padding-right: 0; }
+
+  .column.half {
+    width: 50%; } }
+/* Border box hack */
+*,
+*:after,
+*:before {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/* Clearfix */
+.clearfix:after,
+.clearfix:before {
+  content: " ";
+  display: table; }
+
+.clearfix:after {
+  clear: both; }
 
 /* Swatches */
 /* =========================================================================*/
 .swatch {
   text-align: center;
-  width: 100px;
+  width: 8em;
   display: inline-block;
   margin-right: 1em; }
 
