--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -4,6 +4,8 @@
 .row {
     margin: 0 auto;
     max-width: 960px;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 @media screen and (min-width: $break-medium) {
     .column {
@@ -19,7 +21,10 @@
     }
     .column.half {
         width: 50%;
-      }
+    }
+    .column.sixth {
+        width: 16.6666667%;
+    }
 }
 /* Border box hack */
 *,
