--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,10 @@
 body {
   color: #314249;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 18px; }
+  font-size: 100%; }
+  @media screen and (min-width: 1200px) {
+    body {
+      font-size: 120%; } }
 
 /* Headings */
 .heading--xlarge {
@@ -90,7 +93,9 @@ ul {
 /* Grid */
 .row {
   margin: 0 auto;
-  max-width: 960px; }
+  max-width: 960px;
+  padding-left: 0.5em;
+  padding-right: 0.5em; }
 
 @media screen and (min-width: 750px) {
   .column {
@@ -105,7 +110,10 @@ ul {
     padding-right: 0; }
 
   .column.half {
-    width: 50%; } }
+    width: 50%; }
+
+  .column.sixth {
+    width: 16.6666667%; } }
 /* Border box hack */
 *,
 *:after,
@@ -126,10 +134,7 @@ ul {
 /* Swatches */
 /* =========================================================================*/
 .swatch {
-  text-align: center;
-  width: 8em;
-  display: inline-block;
-  margin-right: 1em; }
+  text-align: center; }
 
 .swatch__circle {
   border-radius: 100%;
@@ -145,7 +150,7 @@ ul {
 /* =========================================================================*/
 .example {
   border: 1px solid #90999C;
-  padding: 1em;
+  padding: 0.5em;
   margin-bottom: 1em; }
 
 .example > * {
