--- a/css/style.scss
+++ b/css/style.scss
@@ -2,5 +2,6 @@
 @import 'breakpoints';
 @import 'typography';
 @import 'layout';
-@import 'swatches';
+@import 'header';
 @import 'example';
+@import 'swatches';
