Add css to fix long words breaking

--- a/css/_example.scss
+++ b/css/_example.scss
@@ -4,6 +4,12 @@
     border: 1px solid $colour-medium-grey;
     padding: 0.5em;
     margin-bottom: 1em;
+
+    /* Stop long words breaking out https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
 }
 .example > * {
     margin-top:0;
