--- a/css/style.css
+++ b/css/style.css
@@ -98,24 +98,25 @@ a {
 /* Grid */
 .row {
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 400px;
   padding-left: 0.5em;
   padding-right: 0.5em; }
+  @media screen and (min-width: 750px) {
+    .row {
+      max-width: 900px; } }
 
 @media screen and (min-width: 750px) {
   .column {
     float: left;
     padding-left: 0.5em;
-    padding-right: 0.5em; }
-
-  .column:first-child {
-    padding-left: 0; }
-
-  .column:last-child {
-    padding-right: 0; }
+    padding-right: 0.5em;
+    width: 100%; }
 
   .column.half {
     width: 50%; }
+
+  .column.quarter {
+    width: 25%; }
 
   .column.sixth {
     width: 16.6666667%; } }
@@ -143,6 +144,12 @@ a {
 
 .clearfix:after {
   clear: both; }
+
+/* Images */
+/* =========================================================================*/
+img {
+  height: auto;
+  max-width: 100%; }
 
 /* Header */
 /* =========================================================================*/
