--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 @import 'breakpoints';
 @import 'typography';
 @import 'layout';
+@import 'images';
 @import 'header';
 @import 'example';
 @import 'swatches';
