--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -5,27 +5,31 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 100%;
     @media screen and (min-width: $break-large) {
-      font-size: 120%;
+      font-size: 130%;
     }
 }
-/* Headings */
+/* Heading Font Size */
+.heading--xxlarge {
+    font-size: 4em;
+    font-weight: bold;
+}
 .heading--xlarge {
-    font-size: 48px;
+    font-size: 2.5em;
     font-weight: bold;
 }
 .heading--large {
-    font-size: 36px;
+    font-size: 2em;
     font-weight: bold;
 }
 .heading--medium {
-    font-size: 24px;
+    font-size: 1.3em;
     font-weight: bold;
 }
 .heading--small {
-    font-size: 18px;
+    font-size: 1.1em;
     font-weight: bold;
 }
-/* Weights */
+/* Font Weights */
 .font-weight--light {
   font-weight: 300;
 }
