--- a/css/style.css
+++ b/css/style.css
@@ -49,26 +49,30 @@ body {
   font-size: 100%; }
   @media screen and (min-width: 1200px) {
     body {
-      font-size: 120%; } }
+      font-size: 130%; } }
 
-/* Headings */
+/* Heading Font Size */
+.heading--xxlarge {
+  font-size: 4em;
+  font-weight: bold; }
+
 .heading--xlarge {
-  font-size: 48px;
+  font-size: 2.5em;
   font-weight: bold; }
 
 .heading--large {
-  font-size: 36px;
+  font-size: 2em;
   font-weight: bold; }
 
 .heading--medium {
-  font-size: 24px;
+  font-size: 1.3em;
   font-weight: bold; }
 
 .heading--small {
-  font-size: 18px;
+  font-size: 1.1em;
   font-weight: bold; }
 
-/* Weights */
+/* Font Weights */
 .font-weight--light {
   font-weight: 300; }
 
@@ -103,7 +107,7 @@ a {
   padding-right: 0.5em; }
   @media screen and (min-width: 750px) {
     .row {
-      max-width: 900px; } }
+      max-width: 1000px; } }
 
 @media screen and (min-width: 750px) {
   .column {
@@ -149,7 +153,8 @@ a {
 /* =========================================================================*/
 img {
   height: auto;
-  max-width: 100%; }
+  max-width: 100%;
+  vertical-align: middle; }
 
 /* Header */
 /* =========================================================================*/
