--- a/css/_example.scss
+++ b/css/_example.scss
@@ -15,3 +15,12 @@
     margin-top:0;
     margin-bottom:0;
 }
+.example--no-border {
+  border: none;
+  padding: 0;
+
+}
+.example__caption {
+  text-align: center;
+    padding: 1em 0;
+}
