--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -42,6 +42,10 @@ body {
 .font-weight--bold {
   font-weight: 700;
 }
+/* Padding */
+.font--padding-bottom {
+  padding-bottom: 2em;
+}
 /* Colours */
 .font-color--white {
   color: $colour-white
