--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -20,6 +20,9 @@
     .column.half {
         width: 50%;
     }
+    .column.third {
+        width: 33.3333333%;
+    }
     .column.quarter {
         width: 25%;
     }
