--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,8 @@
 @import 'typography';
 @import 'layout';
 @import 'images';
+@import 'background-images';
 @import 'header';
 @import 'example';
 @import 'swatches';
+@import 'filterz';
