--- a/css/_filterz.scss
+++ b/css/_filterz.scss
@@ -18,7 +18,7 @@
   filter: grayscale(100%);
 }
 .filter__layer--windmill {
-  background-image: url("/img/windmills.png");
+  background-image: url("../img/windmills.png");
   background-size: cover;
   background-repeat:no-repeat;
   background-position: center center;
