--- a/css/_filterz.scss
+++ b/css/_filterz.scss
@@ -2,24 +2,12 @@
 /* =========================================================================*/
 .filter {
   position: relative;
-  height:20em;
+  display: inline-block;
 }
-.filter__layer {
-  position: absolute;
-  display: block;
-  height: 20em;
-  width: 100%;
+.filter__image--desaturate {
+  -webkit-filter: saturate(0%);
+  filter: saturate(0%);
 }
-.filter__layer--multiply {
+.filter__image--multiply {
   mix-blend-mode: multiply;
-}
-.filter__layer--grayscale {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-}
-.filter__layer--windmill {
-  background-image: url("../img/windmills.png");
-  background-size: cover;
-  background-repeat:no-repeat;
-  background-position: center center;
 }
