Update header spacing

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,5 +1,6 @@
 /* Header */
 /* =========================================================================*/
-.header__title {
-margin-bottom:0;
+.header {
+  padding-top: 1.8em;
+  padding-bottom: 2em;
 }
