--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -55,3 +55,14 @@
 .clearfix:after {
     clear: both;
 }
+/* Visually Hidden */
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
