--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
 @import 'layout';
 @import 'images';
 @import 'header';
+@import 'logo';
 @import 'example';
 @import 'swatches';
 @import 'filterz';
