--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -46,6 +46,9 @@ body {
 .text--align-center {
   text-align: center;
 }
+.text--align-right {
+  text-align: right;
+}
 /* Spacing */
 .margin-bottom--none {
   margin-bottom: 0;
