--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 @import 'typography';
 @import 'layout';
 @import 'images';
+@import 'icons';
 @import 'header';
 @import 'logo';
 @import 'example';
