--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -5,10 +5,10 @@
     margin: 0 auto;
     max-width: 400px;
     @media screen and (min-width: $break-medium) {
-      max-width: 1000px;
+      max-width: none;
     }
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
 }
 @media screen and (min-width: $break-medium) {
     .column {
@@ -17,16 +17,16 @@
         padding-right: 0.5em;
         width: 100%;
     }
-    .column.half {
+    .half {
         width: 50%;
     }
-    .column.third {
+    .third {
         width: 33.3333333%;
     }
-    .column.quarter {
+    .quarter {
         width: 25%;
     }
-    .column.sixth {
+    .sixth {
         width: 16.6666667%;
     }
 }
