Adding more icons

--- a/css/_icons.scss
+++ b/css/_icons.scss
@@ -12,3 +12,15 @@
     background-image: url("../img/icon-twitter-dark-grey.png");
     background-size: 100%;
 }
+.icon__linkedin-dark-grey {
+    width: 20px;
+    height: 20px;
+    background-image: url("../img/icon-linkedin-dark-grey.png");
+    background-size: 100%;
+}
+.icon__facebook-dark-grey {
+    width: 20px;
+    height: 20px;
+    background-image: url("../img/icon-facebook-dark-grey.png");
+    background-size: 100%;
+}
