--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -11,10 +11,11 @@ body {
 /* Heading Font Size */
 .heading--xxlarge {
     font-size: 4em;
-    font-weight: bold;
+    font-weight: 900;
+    line-height: 1;
 }
 .heading--xlarge {
-    font-size: 2.5em;
+    font-size: 3em;
     font-weight: bold;
 }
 .heading--large {
