Productising page ready for review

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,6 +1,6 @@
 /* Header */
 /* =========================================================================*/
 .header {
-  padding-top: 1.8em;
-  padding-bottom: 2em;
+  padding-top: .8em;
+  padding-bottom: 1em;
 }
