--- a/css/_images.scss
+++ b/css/_images.scss
@@ -2,6 +2,6 @@
 /* =========================================================================*/
 img {
     height: auto;
-    max-width: 100%;
+    width: 100%;
     vertical-align: middle;
 }
