--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -5,11 +5,17 @@
     margin: 0 auto;
 }
 .column {
-    padding-top:1em;
-    padding-right: 0.5em;
-    padding-bottom: 1em;
-    padding-left: 0.5em;
     width: 100%;
+    padding: 1em 5%;
+}
+.column--medium-padding {
+  padding: 2em 10% 3em 10%;
+}
+.column--large-padding {
+  padding: 4em 20% 5em 20%;
+}
+.column--no-padding {
+    padding: 0;
 }
 @media screen and (min-width: $break-medium) {
     .column {
@@ -28,6 +34,32 @@
         width: 16.6666667%;
     }
 }
+/* Square containers */
+@media screen and (min-width: $break-medium) {
+    .square {
+      position: relative;
+      padding: 0;
+    }
+
+    .square:after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+
+    .square__content {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      padding: 0em 1.1em;
+    }
+}
+@media screen and (min-width: $break-large) {
+    .square__content {
+      padding: 0.8em 1.8em;
+    }
+}
+
 /* Container */
 .container--border {
   border-bottom: 1px solid $colour-light-grey;
