--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -3,113 +3,130 @@
 body {
     color: $colour-dark-grey;
     font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
     font-size: 100%;
+    line-height: 1.5;
     @media screen and (min-width: $break-large) {
-      font-size: 130%;
+        font-size: 120%;
     }
 }
 /* Heading Font Size */
 .heading--xxlarge {
-    font-size: 4em;
+    @media screen and (min-width: $break-large) {
+        font-size: 4em;
+    }
     font-weight: 900;
     line-height: 1;
 }
 .heading--xlarge {
-    font-size: 3em;
+    @media screen and (min-width: $break-large) {
+        font-size: 3em;
+    }
     font-weight: bold;
+    line-height: 1.1;
 }
 .heading--large {
-    font-size: 2em;
+    @media screen and (min-width: $break-large) {
+        font-size: 2em;
+    }
     font-weight: bold;
+    line-height: 1.1;
 }
 .heading--medium {
-    font-size: 1.3em;
+    @media screen and (min-width: $break-large) {
+        font-size: 1.3em;
+    }
     font-weight: bold;
+    line-height: 1.1;
 }
 .heading--small {
-    font-size: 1.1em;
+    @media screen and (min-width: $break-large) {
+        font-size: 1.1em;
+    }
     font-weight: bold;
+    line-height: 1.1;
 }
 /* Font Size */
 .font-size--medium {
     font-size: 1.3em;
 }
-.font-size--small {
-    font-size: 1.1em;
-}
 /* Font Weights */
 .font-weight--light {
-  font-weight: 300;
+    font-weight: 300;
 }
 .font-weight--regular {
-  font-weight: 400;
+    font-weight: 400;
 }
 .font-weight--semi-bold {
-  font-weight: 600;
+    font-weight: 600;
 }
 .font-weight--bold {
-  font-weight: 700;
+    font-weight: 700;
 }
 /* Alignment */
 .text--align-center {
-  text-align: center;
+    text-align: center;
 }
 .text--align-right {
-  text-align: right;
+    text-align: right;
 }
 /* Spacing */
 .margin-bottom--none {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 .padding-bottom--medium {
-  padding-bottom: 2em;
+    padding-bottom: 2em;
 }
 /* Colours */
 .font-color--white {
-  color: $colour-white
+    color: $colour-white;
 }
 .font-color--orange {
-  color: $colour-orange
+    color: $colour-orange;
 }
 .font-color--light-grey {
-  color: $colour-light-grey;
+    color: $colour-light-grey;
 }
 .font-color--medium-grey {
-  color: $colour-medium-grey;
+    color: $colour-medium-grey;
 }
 .font-color--dark-grey {
-  color: $colour-dark-grey;
+    color: $colour-dark-grey;
 }
 .font-color--pink {
-  color: $colour-pink;
+    color: $colour-pink;
 }
 .font-color--peach {
-  color: $colour-peach;
+    color: $colour-peach;
 }
 .font-color--yellow {
-  color: $colour-yellow;
+    color: $colour-yellow;
 }
 .font-color--green {
-  color: $colour-green;
+    color: $colour-green;
 }
 .font-color--turquoise {
-  color: $colour-turquoise;
+    color: $colour-turquoise;
 }
 .font-color--blue {
-  color: $colour-blue;
+    color: $colour-blue;
 }
 .font-color--purple {
-  color: $colour-purple;
+    color: $colour-purple;
 }
 .font-color--warm-grey {
-  color: $colour-warm-grey;
+    color: $colour-warm-grey;
 }
 /* Lists */
 ul {
     padding-left: 0;
     list-style: none;
 }
+ul li:before {
+    content: '/ ';
+    margin-right: 0.5em;
+}
 /* Links */
 a {
-  color: darken($colour-blue,10%);
+    color: darken($colour-blue,10%);
 }
