--- a/css/style.css
+++ b/css/style.css
@@ -43,39 +43,52 @@
 body {
   color: #314249;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 100%; }
+  font-weight: 400;
+  font-size: 100%;
+  line-height: 1.5; }
   @media screen and (min-width: 1200px) {
     body {
-      font-size: 130%; } }
+      font-size: 120%; } }
 
 /* Heading Font Size */
 .heading--xxlarge {
-  font-size: 4em;
   font-weight: 900;
   line-height: 1; }
+  @media screen and (min-width: 1200px) {
+    .heading--xxlarge {
+      font-size: 4em; } }
 
 .heading--xlarge {
-  font-size: 3em;
-  font-weight: bold; }
+  font-weight: bold;
+  line-height: 1.1; }
+  @media screen and (min-width: 1200px) {
+    .heading--xlarge {
+      font-size: 3em; } }
 
 .heading--large {
-  font-size: 2em;
-  font-weight: bold; }
+  font-weight: bold;
+  line-height: 1.1; }
+  @media screen and (min-width: 1200px) {
+    .heading--large {
+      font-size: 2em; } }
 
 .heading--medium {
-  font-size: 1.3em;
-  font-weight: bold; }
+  font-weight: bold;
+  line-height: 1.1; }
+  @media screen and (min-width: 1200px) {
+    .heading--medium {
+      font-size: 1.3em; } }
 
 .heading--small {
-  font-size: 1.1em;
-  font-weight: bold; }
+  font-weight: bold;
+  line-height: 1.1; }
+  @media screen and (min-width: 1200px) {
+    .heading--small {
+      font-size: 1.1em; } }
 
 /* Font Size */
 .font-size--medium {
   font-size: 1.3em; }
-
-.font-size--small {
-  font-size: 1.1em; }
 
 /* Font Weights */
 .font-weight--light {
@@ -149,6 +162,10 @@ ul {
   padding-left: 0;
   list-style: none; }
 
+ul li:before {
+  content: '/ ';
+  margin-right: 0.5em; }
+
 /* Links */
 a {
   color: #2c5786; }
@@ -160,13 +177,19 @@ a {
   margin: 0 auto; }
 
 .column {
-  padding-top: 1em;
-  padding-right: 0.5em;
-  padding-bottom: 1em;
-  padding-left: 0.5em;
-  width: 100%; }
+  width: 100%;
+  padding: 1em 5%; }
 
-@media screen and (min-width: 500px) {
+.column--medium-padding {
+  padding: 2em 10% 3em 10%; }
+
+.column--large-padding {
+  padding: 4em 20% 5em 20%; }
+
+.column--no-padding {
+  padding: 0; }
+
+@media screen and (min-width: 950px) {
   .column {
     float: left; }
 
@@ -181,6 +204,25 @@ a {
 
   .column--sixth {
     width: 16.6666667%; } }
+/* Square containers */
+@media screen and (min-width: 950px) {
+  .square {
+    position: relative;
+    padding: 0; }
+
+  .square:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%; }
+
+  .square__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 0em 1.1em; } }
+@media screen and (min-width: 1200px) {
+  .square__content {
+    padding: 0.8em 1.8em; } }
 /* Container */
 .container--border {
   border-bottom: 1px solid #EBEEEE; }
@@ -217,7 +259,7 @@ a {
 /* =========================================================================*/
 img {
   height: auto;
-  max-width: 100%;
+  width: 100%;
   vertical-align: middle; }
 
 /* Icons */
@@ -249,8 +291,8 @@ img {
 /* Header */
 /* =========================================================================*/
 .header {
-  padding-top: 1.8em;
-  padding-bottom: 2em; }
+  padding-top: .8em;
+  padding-bottom: 1em; }
 
 /* Footer */
 /* =========================================================================*/
