Improving content and design

--- a/css/_colours.scss
+++ b/css/_colours.scss
@@ -18,6 +18,9 @@ $colour-warm-grey: #898681;
 .background--orange {
     background-color: $colour-orange;
 }
+.background--white {
+    background-color: $colour-white;
+  }
 .background--light-grey {
     background-color: $colour-light-grey;
 }
