--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -9,10 +9,10 @@
     padding: 1em 5%;
 }
 .column--medium-padding {
-  padding: 2em 10% 3em 10%;
+  padding: 2em 10% 2em 10%;
 }
 .column--large-padding {
-  padding: 4em 20% 5em 20%;
+  padding: 4em 20% 4em 20%;
 }
 .column--no-padding {
     padding: 0;
@@ -51,18 +51,25 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      padding: 0em 1.1em;
+      padding: 0 5%;
     }
 }
 @media screen and (min-width: $break-large) {
     .square__content {
-      padding: 0.8em 1.8em;
+      padding: 8% 13%;
     }
 }
-
 /* Container */
+.container {
+  max-width: 1600px;
+  margin: 0 auto;
+}
 .container--border {
   border-bottom: 1px solid $colour-light-grey;
+}
+/* Body */
+body {
+  background-color: darken($colour-light-grey, 5%);
 }
 /* Border box hack */
 *,
