--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -117,6 +117,14 @@ body {
 .font-color--warm-grey {
     color: $colour-warm-grey;
 }
+/* Width */
+@media screen and (min-width: $break-medium) {
+  .font-width--half {
+    width:50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 /* Lists */
 ul {
     padding-left: 0;
