--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 .background--orange {
   background-color: #F8981D; }
 
+.background--white {
+  background-color: #FFFFFF; }
+
 .background--light-grey {
   background-color: #EBEEEE; }
 
@@ -157,6 +160,12 @@ body {
 .font-color--warm-grey {
   color: #898681; }
 
+/* Width */
+@media screen and (min-width: 950px) {
+  .font-width--half {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto; } }
 /* Lists */
 ul {
   padding-left: 0;
@@ -181,10 +190,10 @@ a {
   padding: 1em 5%; }
 
 .column--medium-padding {
-  padding: 2em 10% 3em 10%; }
+  padding: 2em 10% 2em 10%; }
 
 .column--large-padding {
-  padding: 4em 20% 5em 20%; }
+  padding: 4em 20% 4em 20%; }
 
 .column--no-padding {
   padding: 0; }
@@ -219,13 +228,21 @@ a {
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 0em 1.1em; } }
+    padding: 0 5%; } }
 @media screen and (min-width: 1200px) {
   .square__content {
-    padding: 0.8em 1.8em; } }
+    padding: 8% 13%; } }
 /* Container */
+.container {
+  max-width: 1600px;
+  margin: 0 auto; }
+
 .container--border {
   border-bottom: 1px solid #EBEEEE; }
+
+/* Body */
+body {
+  background-color: #dde2e2; }
 
 /* Border box hack */
 *,
