--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -71,6 +71,9 @@ body {
     text-align: right;
 }
 /* Spacing */
+.margin-top--none {
+    margin-top: 0;
+}
 .margin-bottom--none {
     margin-bottom: 0;
 }
