--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
 
 /* Heading Font Size */
 .heading--xxlarge {
+  font-size: 3em;
   font-weight: 900;
   line-height: 1; }
   @media screen and (min-width: 1300px) {
@@ -62,6 +63,7 @@ body {
       font-size: 4em; } }
 
 .heading--xlarge {
+  font-size: 2em;
   font-weight: bold;
   line-height: 1.1; }
   @media screen and (min-width: 1300px) {
@@ -69,6 +71,7 @@ body {
       font-size: 3em; } }
 
 .heading--large {
+  font-size: 1.5em;
   font-weight: bold;
   line-height: 1.1; }
   @media screen and (min-width: 1300px) {
@@ -76,18 +79,14 @@ body {
       font-size: 2em; } }
 
 .heading--medium {
+  font-size: 1.3em;
   font-weight: bold;
   line-height: 1.1; }
-  @media screen and (min-width: 1300px) {
-    .heading--medium {
-      font-size: 1.3em; } }
 
 .heading--small {
+  font-size: 1.1em;
   font-weight: bold;
   line-height: 1.1; }
-  @media screen and (min-width: 1300px) {
-    .heading--small {
-      font-size: 1.1em; } }
 
 /* Font Size */
 .font-size--medium {
@@ -281,6 +280,9 @@ img {
   height: auto;
   width: 100%;
   vertical-align: middle; }
+
+.contact {
+  width: 8em; }
 
 /* Icons */
 /* =========================================================================*/
